docker files added with some modifications